--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,36 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "@types/supertest": "^2.0.10",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jest": "^26.6.1",
+    "supertest": "^6.0.0",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5"
   },
   "scripts": {
-    "start": "tsc"
+    "start": "tsc",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/*.+(ts|tsx|js)"
+    ]
   },
   "keywords": [],
   "author": "",
