--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "esModuleInterop": true,
     "noEmitOnError": true,
-    "watch": true
+    "watch": true,
+    "strictPropertyInitialization":false
   },
   "exclude": [
     "node_modules"
