Melhoria na especificação da API

--- a/docs/ngx1-loja-de-animais-1.0.0-resolved.yaml
+++ b/docs/ngx1-loja-de-animais-1.0.0-resolved.yaml
@@ -256,11 +256,11 @@ paths:
                     description: ID do pedido
                 example: { pedidoId: 5 }
         "400":
-          description: Valor em carrinho menor que dez reais
+          description: Parâmetros inválidos
         "404":
           description: Carrinho vazio
   /pedido/status:
-    post:
+    put:
       tags:
       - pedido
       summary: Atualiza o status de um pedido.
