--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@types/bluebird": "^3.5.33",
+    "@types/node": "^14.14.6",
+    "@types/validator": "^13.1.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.22.3",
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
